# cloudplay

mcgo-app/: package.json  pnpm-lock.yaml
mcgo-app/src/: App.tsx
mcgo-app/src-tauri/: Cargo.toml  tauri.conf.json
mcgo-app/src-tauri/capabilities/: default.json
mcgo-app/src-tauri/icons/: create_icons.py  generate-icons.mjs
mcgo-app/src-tauri/src/: lib.rs
mcgo-app/src/components/: Sidebar.tsx  WindowControls.tsx
mcgo-app/src/hooks/: useTheme.ts
mcgo-app/src/lib/: appIcon.ts  embeddedIcons.ts
mcgo-app/src/styles/: globals.css
mcgo-backend/: wrangler.toml
mcgo-backend/src/: index.ts
